Modificaciones de ejercicio 5

--- a/05-SpinnerMenu/.project
+++ b/05-SpinnerMenu/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>05-OptionsMenu</name>
+	<name>05-SpinnerMenu</name>
 	<comment></comment>
 	<projects>
 	</projects>
