--- a/05-SpinnerMenu/AndroidManifest.xml
+++ b/05-SpinnerMenu/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="es.jimenezfrontend.optmenu"
+    package="es.jimenezfrontend.spinner"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="es.jimenezfrontend.optmenu.Main"
+            android:name="es.jimenezfrontend.spinner.Main"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
